Add go to definition.
It does not work properly, but that is more an issue with the
interpreter than with this extension.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@types/vscode": "^1.49.0",
     "esbuild": "^0.14.2"
   },
+  "configurationDefaults": {
+    "rvg": {
+      "editor.semanticHighlighting.enabled": true
+    }
+  },
   "contributes": {
     "languages": [
       {
