--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "rvg-vsc",
   "displayName": "rvg-vsc",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/petervdonovan/rvg-vsc.git"
+  },
   "description": "",
   "version": "0.0.1",
   "engines": {
@@ -47,6 +51,10 @@
     "vscode:prepublish": "npm run esbuild-base -- --minify",
     "compile": "npm run esbuild-base -- --sourcemap",
     "watch": "npm run esbuild-base -- --sourcemap --watch",
-    "install": "npm run compile"
+    "install": "npm run compile",
+    "deploy": "vsce package && echo \"Y\r\n\" | code --install-extension rvg-vsc-*.vsix --force"
+  },
+  "dependencies": {
+    "@vscode/vsce": "^2.17.0"
   }
 }
