--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
         "extensions": [
           ".rvg"
         ],
-        "configuration": "./language-configuration.json"
+        "configuration": "./language-configuration.json",
+        "icon": {
+          "light": "./icons/g2.png",
+          "dark": "./icons/g2.png"
+        }
       }
     ],
     "grammars": [
