--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rvg-vsc",
-  "displayName": "rvg-vsc",
+  "name": "rvg",
+  "displayName": "rvg",
   "repository": {
     "type": "git",
     "url": "https://github.com/petervdonovan/rvg-vsc.git"
@@ -8,7 +8,7 @@
   "description": "",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.74.0"
+    "vscode": "^1.77.0"
   },
   "main": "out/extension",
   "categories": [
@@ -56,7 +56,7 @@
     "compile": "npm run esbuild-base -- --sourcemap",
     "watch": "npm run esbuild-base -- --sourcemap --watch",
     "install": "npm run compile",
-    "deploy": "vsce package && echo \"Y\r\n\" | code --install-extension rvg-vsc-*.vsix --force"
+    "deploy": "vsce package && echo \"Y\r\n\" | code --install-extension rvg-*.vsix --force"
   },
   "dependencies": {
     "@vscode/vsce": "^2.17.0"
